--- a/style.css
+++ b/style.css
@@ -399,8 +399,8 @@ opacity: 1;
     background-position: center;
     background-size: cover;
     position: absolute;
-    top: 70rem;
-    left: 20rem;
+    top: 67rem;
+    left: 23%;
     width: 15%;
     height: 38%;
     border: 1px solid grey;
@@ -414,7 +414,7 @@ opacity: 1;
     position:relative;
     top: 41px;
     left: 44%;
-    width: 15%;
+    width: 21%;
     height: 42px;
     font: normal normal bold 35px/44px Inter;
     letter-spacing: 0px;
@@ -474,9 +474,8 @@ opacity: 1;
 
 @media only screen and (max-width:700px){
     #aboutMeHead{
-    
         position: relative;
-        top: -3%;
+        top: -5%;
         right: 30%;
         left: 36%;
         margin-top: 0%;
@@ -485,18 +484,17 @@ opacity: 1;
         font: normal normal bold 100%/5% Inter;
         letter-spacing: 0px;
         color: #105652;
-        border-bottom: 5px solid #FCA738;
-    }
+        border-bottom: 3px solid #FCA738;
+}
     
     
     
     #aboutBox{
-
-        margin-top: 23%;
-        width:fit-content;
+        margin-top: 47%;
+        width: fit-content;
         height: 34rem;
         background: #FFFFFF 0% 0% no-repeat padding-box;
-        box-shadow: 0px 0px 59px gray;
+        box-shadow: 0px 0px 59px grey;
         border-radius: 20px;
         opacity: 1;
         }
@@ -536,9 +534,9 @@ opacity: 1;
 }
 #smallAboutBox{
     position: relative;
-    top: 14%;
-    left: 1%;
-    width: 98%;
+    top: 15%;
+    left: 7%;
+    width: 86%;
     height: 14%;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 0px 30px #00000029;
@@ -552,6 +550,7 @@ opacity: 1;
     position: relative;
     top: 16%;
     left: 0%;
+    font-size: 95%;
     text-align: center;
     color: orangered;
 }
@@ -661,17 +660,18 @@ cursor: pointer;
 
     #portfolioHead{
         position: relative;
-        left: 36%;
+        left: 39%;
         top: 0%;
-        width: 109px;
-        height: 13px;
+        width: 74px;
+        height: 6px;
         text-align: center;
-        font: normal normal bold 21px/1px Inter;
+        font: normal normal bold 13px/1px Inter;
         letter-spacing: 0px;
         color: #105652;
         opacity: 1;
-        border-bottom: 7px solid #FCA738;
+        border-bottom: 3px solid #FCA738;
         margin-top: 12%;
+    }
     }
     #projectBox{
         display: flex;
@@ -738,7 +738,7 @@ cursor: pointer;
         opacity: 1;
     cursor: pointer;
     
-    }
+    
 }
 
 
@@ -813,26 +813,24 @@ margin-bottom: -25px;
         padding: 4%;
         margin-left: 14%;
     }
-    #resumeHeading {
-        left: 34%;
-        width: 26%;
-        height: 2%; position: relative;
-        left: 34%;
-        width: 26%;
+    #resumeHeading{
+        position: relative;
+        left: 39%;
         height: 2%;
-    font: normal normal bold 20px/1px Inter;
-    letter-spacing: 0px;
-    color: #105652;
-    border-bottom: 4px solid #FCA738;
+        width: 23%;
+        font: normal normal bold 15px/1px Inter;
+        letter-spacing: 0px;
+        color: #105652;
+        border-bottom: 0px solid #FCA738;
 }
 .resumeSmallHeading{
     text-align: left;
-font: normal normal bold 24px/30px Inter;
-letter-spacing: 0px;
-color: #105652;
-opacity: 1;
-margin-left: 9px;
-margin-bottom: -25px;
+    font: normal normal bold 17px/4px Inter;
+    letter-spacing: 0px;
+    color: #105652;
+    opacity: 1;
+    margin: 12% 1% -3% 5%;
+
 }
 .vl {
     display: none;
@@ -869,6 +867,7 @@ margin-bottom: -25px;
 
   
   #peoplesHeading{
+
       width: 454px;
       height: 42px;
       text-align: center;
@@ -965,18 +964,20 @@ span i{
 @media only screen and (max-width:700px){
   
     #peoplesHeading{
-        width: 42vw;
+        width: 51vw;
         height: 16px;
-        text-align: center;
-        font: normal normal bold 1rem/1rem Inter;
+        /* text-align: center; */
+        font: normal normal bold 0.9rem/0.9rem Inter;
         letter-spacing: 0px;
-  color: #105652;
-  opacity: 1;
-  border-bottom: 4px solid #FCA738;
-  margin: 5%;
-  position: relative;
-  left: 22%;
-  top: 7%;
+        color: #105652;
+        opacity: 1;
+        border-bottom: 2px solid #FCA738;
+        margin: 0%;
+        position: relative;
+        left: 26%;
+        top: 7%;
+ 
+    
   }
   
   #peoplesBox{
@@ -985,23 +986,26 @@ span i{
       flex-wrap: wrap;
       justify-content: space-between;
       height: 51vh;
-      width: 100vw;
-      border: 1px dotted black;
-      border-radius: 8px;
+      width: 88%;
+      /* border: 1px dotted black; */
+      border-radius: 10spx;
       align-content: center;
       text-align: center;
-      position: relative;
+      /* position: relative;
       left: 1%;
-      right: 5%;
+      right: 5%; */
   }
   
   .peoples{
-    width: 100vw;
-    height: 33%;
-      background-color: #FFFFFF;
-      border: 1px dotted gray;
+    width: 100%;
+    height: 29%;
+    background-color: #FFFFFF;
+    border: 1px dotted gray;
+    border-radius: 26px;
+    margin-top: 1% 0;
+}
 
-    }
+    
     
   #peoplesPic1{
       margin-top: 2%;
@@ -1059,12 +1063,11 @@ span i{
     width: 56%;
     font-size: 11px;
     font-weight: bold;
-    text-align: center;
     margin-bottom: 0;
     color: #57575e;
     position: relative;
-    bottom: 71%;
-    left: 27%;
+    bottom: 91%;
+    left: 32%;
   }
   span i{
       color: #7B7B88;
@@ -1072,6 +1075,7 @@ span i{
       margin-bottom:0 ;
       position: relative;
       left: -35%;
+      bottom: 10%;
   
   }
 
@@ -1200,12 +1204,11 @@ text-align: center;
 
 
         #contactMeHeading{
-            /* margin-left: 41%; */
+            margin-left: 39%;
             margin-top: 8%;
             text-align: center;
             width: 78px;
             height: 19px;
-            text-align: center;
             font: normal normal bold 1rem/1rem Inter;
             letter-spacing: 0px;
             color: #105652;
@@ -1213,8 +1216,8 @@ text-align: center;
             border-bottom: 3px solid #FCA738;
         }
         #connectBox{
-            margin: 5% 11%;
-            width: 82vw;
+            margin: 5% 4%;
+            width: 90%;
             padding: 4% 1%;
             height: fit-content;
             background-image: url(./5IAcOt1.webp);
@@ -1224,7 +1227,6 @@ text-align: center;
             opacity: 1;
             align-content: center;
             text-align: center;
-        
         }
         #connectSmallHeading1{
             position: relative;
@@ -1315,7 +1317,131 @@ text-align: center;
               cursor: pointer;
               font-weight: bolder;
               color: #FCA738;
-      
-          }
-
+      }
+}
+    footer{
+        position: relative;
+        width: 96vw;
+        height: 80%;
+        padding: 2%;
+       background-size: cover;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
+    
+    footer p:nth-child(1){
+        color: #105652;
+        font-weight: bold;
+        font-size: 19px;
+margin-bottom: -2%;
+    }
+    footer p:nth-child(2){
+        color: #105652;
+        font-weight: bold;
+        font-size: 19px;
+        width: 58vw;
+        height: 5%;
+        padding-bottom: 2%;
+        /* border: 1px solid #105652; */
+        border-radius: 10px;
+        text-align: center;
+        line-height: 26px;
+    }
+    
+    .social{
+        display: flex;
+    }
+    .social a{
+        width: 45px;
+        height: 45px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background:  #105652;
+        border-radius: 50%;
+        margin: 5px 10px;
+        color: white;
+        text-decoration: none;
+        font-size: 20px;
+    }
+    .social a:hover{
+        transform: scale(1.3);
+        transition: .3s;
+    }
+    #end{
+        font-size: 15px;
+        margin-top: 25px;
+        font-weight: bold;
+        color: black;
+        text-align: center;
+        border: 0.1px solid black;
+        width: 100vw;
+        height: fit-content;
+    }
+    @media only screen and (max-width:700px){
+        footer{
+            position: relative;
+            width: 96vw;
+            height: 80%;
+            padding: 2%;
+           background-size: cover;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+          
+        }
+        
+        footer p:nth-child(1){
+            color: #105652;
+            font-weight: bold;
+            font-size: 19px;
+            margin-bottom: -7%;
+            margin-top: 28%;
+    
+        }
+        footer p:nth-child(2){
+            color: #105652;
+            font-weight: bold;
+            font-size: 19px;
+            width: 58vw;
+            height: 5%;
+            padding-bottom: 2%;
+            /* border: 1px solid #105652; */
+            border-radius: 10px;
+            text-align: center;
+            line-height: 26px;
+        }
+        
+        .social{
+            display: flex;
+        }
+        .social a{
+            width: 45px;
+            height: 45px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background:  #105652;
+            border-radius: 50%;
+            margin: 5px 10px;
+            color: white;
+            text-decoration: none;
+            font-size: 20px;
+        }
+        .social a:hover{
+            transform: scale(1.3);
+            transition: .3s;
+        }
+        #end{
+            font-size: 15px;
+            margin-top: 25px;
+            font-weight: bold;
+            color: black; text-align: center;
+            border: 0.1px solid black;
+            width: 100vw;
+            height: fit-content;
+        }
+}
