--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    border: 1px solid black;
+ 
     background: #FBF3E4 no-repeat;
     opacity: 1;
     margin: 0;
@@ -36,7 +36,7 @@ body{
 }
 #right li a{
     display: inline-block;
-	color: orangered;
+	color:#105652;
 	font-weight: bold; 
 opacity: 1;
 text-decoration: none;
@@ -49,7 +49,6 @@ text-transform: uppercase;
     
 #right a:hover{
     color: rgb(231, 85, 31);
-    text-decoration: underline;
   
 }
 
@@ -79,7 +78,7 @@ text-transform: uppercase;
 }
 #right li a{
     display: inline-block;
-	color: orangered;
+	color: #105652;
 	font-weight: bold; 
 opacity: 1;
 text-decoration: none;
@@ -193,6 +192,9 @@ opacity: 1;
 
 /* buttons */
 
+
+   
+  
 #hireMe{
    position: absolute;
     top: 352px;
@@ -200,30 +202,32 @@ left: 103px;
 width: 180px;
 height: 30px;
 background: #09BEAD 0% 0% no-repeat padding-box;
-box-shadow: 0px 16px 29px #18222169;
-border: 1px solid black;
+/* box-shadow: 1px 6px 16px #0BBEAD69; */
+border: 1px solid #303030;
 text-align: center;
 align-content: center;
 border-radius: 8px;
 opacity: 0.99;
 font-size: 16px;
+font-weight: bold;
 color: #FBF3E4;
 padding-top: 10px;
-font-weight: bold;
 cursor: pointer;
+outline: none;
+transition: 0.2s;
+text-transform: uppercase;
+overflow: hidden;
 
 }
 
-#hireMe:hover{
-    transition: ease-in;
-transition-duration: 0.3ms;
-animation: normal;
-color: #09BCAB;
-background-color: #FFFFFF;
-font-weight: bold;
-border: 2px solid;
 
-}
+
+
+#hireMe:hover {
+    box-shadow: 0 0 10px #09BEAD, 0 0 25px #0dfaef, 0 0 50px #09BEAD;
+    transition-delay: 0.1s;
+   }
+   
 
 #getResume{
     position: absolute;
@@ -232,24 +236,28 @@ border: 2px solid;
     width: 180px;
     height: 30px;
     background: #FCA738 0% 0% no-repeat padding-box;
-    box-shadow: 0px 16px 28px #F57F1769;
+    /* box-shadow: 0px 16px 28px #d36c1169; */
     border-radius: 8px;
     opacity: 1;
-border: 1px solid black;
+    border: 1px solid #303030;
+    /* box-shadow: 1px 6px 16px #f5c07b; */
 border-radius: 8px;
 text-align: center;
 padding-top:10px;
 text-decoration: none;
+font-weight: bold;
+font-size: 16px;
 color: black;
+cursor: pointer;
+outline: none;
+transition: 0.2s;
+text-transform: uppercase;
+overflow: hidden;
 }
-#getResume:hover{
-    transition: ease-in;
-    transition-duration: 0.3ms;
-    animation: normal;
-
-    border: 2px solid;
-    font-weight: bold;
-}
+#getResume:hover {
+    box-shadow: 0 0 10px #fbb253, 0 0 25px #FCA738, 0 0 50px #fbb253;
+    transition-delay: 0.1s;
+   }
 
 
 
@@ -371,13 +379,14 @@ padding-top:10px;
 text-decoration: none;
 color: black;
 }
+
 #getResume:hover{
     transition: ease-in;
     transition-duration: 0.3ms;
     animation: normal;
-   
     border: 2px solid;
     font-weight: bold;
+   
 }
 
 }
@@ -411,15 +420,12 @@ opacity: 1;
 }
 
 #aboutMeHead{
-    position:relative;
-    top: 41px;
-    left: 44%;
-    width: 21%;
-    height: 42px;
-    font: normal normal bold 35px/44px Inter;
+    margin-top: 2%;
+    font: normal normal bold 29px/44px Inter;
     letter-spacing: 0px;
     color: #105652;
-    border-bottom: 7px solid #FCA738;
+    /* border-bottom: 4px solid #FCA738; */
+    text-align: center;
 }
 
 
@@ -561,20 +567,17 @@ opacity: 1;
 }
 }
 
-
+#projectBox1 {
+    height: 76vh;
+    width: 100vw;
+}
 #portfolioHead{
-    position: relative;
-    left: 44%;
-    top: 7%;
-width: 183px;
-height: 42px;
-text-align: center;
-font: normal normal bold 35px/44px Inter;
-letter-spacing: 0px;
-color: #105652;
-opacity: 1;
-border-bottom: 7px solid #FCA738;
-margin-top: 12%;
+   
+    text-align: center;
+    font: normal normal bold 29px/44px Inter;
+    letter-spacing: 0px;
+    color: #105652;
+    opacity: 1;
 }
 
 
@@ -589,8 +592,7 @@ margin-top: 12%;
     width: 80vw;
     height: fit-content;
     padding-top: 1%;
-    margin: 5% 10%;
-    border: 1px solid gray;
+    margin: 5% 5%;
 }
   
    
@@ -675,16 +677,17 @@ cursor: pointer;
     }
     #projectBox{
         display: flex;
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        cursor: pointer;
-        border-radius: 15px;
-        width: 80vw;
-        height: fit-content;
-        padding-top: 1%;
-        margin: 5% 10%;
-        border: 1px solid gray;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    cursor: pointer;
+    border-radius: 15px;
+    width: 78vw;
+    height: fit-content;
+    padding-top: 1%;
+    margin: 6% 10%;
+    /* border: 1px solid gray; */
+    background-color: white;
     }
       
        
@@ -751,16 +754,16 @@ cursor: pointer;
     margin-left: 14%;
 }
 #resumeHeading{
-    position: relative;
-    top: 0px;
-    left: 45%;
-    width: 120px;
+       /* position: relative; */
+    /* top: 0px; */
+    /* left: 45%; */
+    /* width: 120px; */
     height: 4%;
-    /* text-align: left; */
-    font: normal normal bold 35px/1px Inter;
+    text-align: center;
+    font: normal normal bold 29px/1px Inter;
     letter-spacing: 0px;
     color: #105652;
-    border-bottom: 7px solid #FCA738;
+    /* border-bottom: 7px solid #FCA738*/
 }
 .resumeSmallHeading{
     text-align: left;
@@ -868,18 +871,17 @@ margin-bottom: -25px;
   
   #peoplesHeading{
 
-      width: 454px;
+      /* width: 45px; */
       height: 42px;
       text-align: center;
       font: normal normal bold 2rem/2rem Inter;
       letter-spacing: 0px;
 color: #105652;
 opacity: 1;
-border-bottom: 7px solid #FCA738;
+
 margin: 5%;
-position: relative;
-left: 32%;
-top: 7%;
+padding: 3%;
+
 }
 
 #peoplesBox{
@@ -1017,7 +1019,7 @@ span i{
       height: 3rem;
       position: relative;
       right: 35%;
-      /* display: none; */
+     
   
   }
   #peoplesPic2{
@@ -1084,16 +1086,16 @@ span i{
 
 
   #contactMeHeading{
-      margin-left: 44%;
       margin-top: 10%;
-    width: 180px;
-    height: 42px;
-    text-align:center;
-    font: normal normal bold 35px/44px Inter;
-    letter-spacing: 0px;
-    color: #105652;
-    opacity: 1;
-    border-bottom: 8px solid #FCA738;
+      height: 42px;
+      text-align:center;
+      font: normal normal bold 29px/44px Inter;
+      letter-spacing: 0px;
+      color: #105652;
+      opacity: 1;
+      /* width: 180px; */
+      /* margin-left: 44%; */
+    /* border-bottom: 8px solid #FCA738; */
   }
   #connectBox{
     margin: 5% 15%;
@@ -1103,7 +1105,6 @@ span i{
     background-position: center;
     background-size: cover;
     border-radius: 10px;
-    /* opacity: 1; */
     align-content: center;
     text-align: center;
   }
@@ -1128,12 +1129,11 @@ span i{
     font: normal normal bold 26px/31px Inter;
     letter-spacing: 0px;
     color: whitesmoke;
-
-    /* background-color: #27c6b6; */
     opacity: 1;
     width: 40%;
     padding-top: 2%;
   }
+
   
   #connectText{
     display: inline-block;
@@ -1317,8 +1317,10 @@ text-align: center;
               cursor: pointer;
               font-weight: bolder;
               color: #FCA738;
-      }
-}
+      
+          }
+
+    }
     footer{
         position: relative;
         width: 96vw;
@@ -1373,9 +1375,12 @@ margin-bottom: -2%;
     #end{
         font-size: 15px;
         margin-top: 25px;
+        margin-bottom: -20px;
         font-weight: bold;
         color: black;
+        /* position: absolute; */
         text-align: center;
+        /* left: 0%; */
         border: 0.1px solid black;
         width: 100vw;
         height: fit-content;
@@ -1391,7 +1396,7 @@ margin-bottom: -2%;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-          
+            /* border: 1px solid #105652; */
         }
         
         footer p:nth-child(1){
@@ -1438,10 +1443,16 @@ margin-bottom: -2%;
         #end{
             font-size: 15px;
             margin-top: 25px;
+            margin-bottom: -11px;
             font-weight: bold;
-            color: black; text-align: center;
+            color: black;
+            /* position: absolute; */
+            text-align: center;
+            /* left: 0%; */
             border: 0.1px solid black;
             width: 100vw;
             height: fit-content;
         }
-}
+
+    }
+    
