--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
- 
+  
     background: #FBF3E4 no-repeat;
     opacity: 1;
     margin: 0;
@@ -210,7 +210,7 @@ border-radius: 8px;
 opacity: 0.99;
 font-size: 16px;
 font-weight: bold;
-color: #FBF3E4;
+color: black;
 padding-top: 10px;
 cursor: pointer;
 outline: none;
@@ -420,6 +420,11 @@ opacity: 1;
 }
 
 #aboutMeHead{
+    /* position: relative; */ 
+    /* top: 41px; */
+    /* left: 44%; */
+    /* width: 21%; */
+    /* height: 42px; */
     margin-top: 2%;
     font: normal normal bold 29px/44px Inter;
     letter-spacing: 0px;
@@ -878,10 +883,12 @@ margin-bottom: -25px;
       letter-spacing: 0px;
 color: #105652;
 opacity: 1;
-
+/* border-bottom: 4px solid #FCA738; */
 margin: 5%;
 padding: 3%;
-
+/* position: relative;
+left: 32%;
+top: 7%; */
 }
 
 #peoplesBox{
@@ -1019,7 +1026,7 @@ span i{
       height: 3rem;
       position: relative;
       right: 35%;
-     
+      /* display: none; */
   
   }
   #peoplesPic2{
@@ -1163,6 +1170,7 @@ text-align: center;
     color: whitesmoke;
     width: 80%;
     background-color: transparent;
+    outline: none;
 }
 #contactMsg{
     height: 20%;
@@ -1177,25 +1185,26 @@ text-align: center;
       padding: 1%;
         width: 9rem;
         height: fit-content;
-        background: #FCA738 0% 0% no-repeat padding-box;
+        font-weight: bold;
+        background: orange 0% 0% no-repeat padding-box;
         border-radius: 8px;
         border: 1px solid #FCA738;
         opacity: 1;
         cursor: pointer;
+        
       }
     #submitForm:hover{
         margin-top: 1%;
       margin-bottom: 3%;
       padding: 1%;
-        width: 12rem;
+        width: 9rem;
         height: fit-content;
         background: #FCA738 0% 0% no-repeat padding-box;
         border-radius: 8px;
-        border: 1px solid #FCA738;
+        border: 1px solid orange;
         opacity: 1;
         cursor: pointer;
-        font-weight: bold;
-
+font-weight: lighter;
     }
 
     /* contact */
@@ -1455,4 +1464,6 @@ margin-bottom: -2%;
         }
 
     }
+
+
     
