--- a/style.css
+++ b/style.css
@@ -817,7 +817,7 @@ margin-bottom: -25px;
         border: 1px solid black;
         height: fit-content;
         width: 66vw;
-        margin: 15%;
+      margin-top: 117%;
         padding: 4%;
         margin-left: 14%;
     }
